--- a/test/Cms.Website/Views/Home/Index.cshtml
+++ b/test/Cms.Website/Views/Home/Index.cshtml
@@ -1,11 +1,6 @@
-﻿<html>
-<head>
-    <link href="/css/app.css" rel="stylesheet">
-    <title>Backoffice</title>
-</head>
-<body>
-    <div id="app"></div>
-    <script src="/js/chunk-vendors.js"></script>
-    <script src="/js/app.js"></script>
-</body>
-</html>
+﻿@{
+    ViewData["Title"] = "Index";
+}
+
+<h1>Index</h1>
+
