--- a/test/Cms.Website/Views/Shared/_Layout.cshtml
+++ b/test/Cms.Website/Views/Shared/_Layout.cshtml
@@ -2,10 +2,10 @@
 
 <html>
 <head>
-
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewData["Title"] - Cms.Website</title>
 </head>
 <body>
-    <span>With layout</span>
     @RenderBody()
 </body>
 </html>
